feat(historical): cache historical prices for 15m interval
Enable caching for historical price requests for the FIFTEEN_MINUTES
interval by annotating getHistoricalPrices with @Cacheable (keyed by
exchange, trading pair and interval). Add JsonTypeInfo to
HistoricalPriceDto to ensure proper polymorphic serialization when
storing/retrieving entries from Redis. Reduce historical prices cache TTL
from 5 to 3 minutes to limit staleness.

Additionally, adjust historical mappers to return mutable lists
(new ArrayList<>()) and use Collectors.toList() for stream collection to
ensure compatibility and avoid returning immutable empty lists.